--- a/css/show.css
+++ b/css/show.css
@@ -67,3 +67,42 @@
     margin-right: 10px;
 }
 
+
+.yema {
+    color: black;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+}
+.yema>div{
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    border: black 2px solid;
+
+}
+
+.yema > div:nth-child(1) {
+
+}
+
+.yema > div:nth-child(2) {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.yema > div:nth-child(3) {
+border: white 2px solid;
+}
+
+.yema > div:nth-child(4) {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.yema > div:nth-child(5) {
+
+}
+
