--- a/css/news.css
+++ b/css/news.css
@@ -8,7 +8,11 @@
     font-size: 20px;
     margin-right: 100px;
 }
-
+.news-1 > div:hover {
+    background-color: white;
+    /*设置字体颜色*/
+    color: rgb(230, 145, 55);
+}
 .news-1 > div:nth-child(1) {
     display: flex;
     justify-content: right;
